Email address changed

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<span>In my spare time, I&nbsp;release free typefaces such as</span> <strong><a class="link" href="https://www.behance.net/gallery/21899055/Motorless-Free-font" target="_blank">Motorless</a></strong> <span>and</span> <strong><a class="link" href="https://www.behance.net/gallery/3481787/NOUGATINE-free-font" target="_blank">Nougatine</a></strong><span>.</span> <span>I'm also a&nbsp;</span><strong><a class="link" href="https://soundcloud.com/inscience" target="_blank">beatmaker</a></strong><span>, but nobody cares.
 		</p>
 
-		<a class="email link" href="mailto:bonjour@fabienlaborie.ca">bonjour@fabienlaborie.ca</a>
+		<a class="email link" href="mailto:laborie.fabien@gmail.com">Drop me a line.</a>
 	</main>
 
 
