--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Fabien Laborie, directeur artistique</title>
-    <meta name="description" content="Fabien Laborie, designer et directeur artistique. Il vit et travaille à Montréal. Passionné de web, de UX et de design imprimé.">
-	<meta name="keywords" content="directeur artistique, designer, site web, webdesign, design, graphisme, graphiste, web design, web, interactif, mobile, tablet, application, responsive, layout, montreal, quebec, editorial, print, imprimé, photoshop, sketch"/>
+    <meta name="description" content="Fabien Laborie, Product and Branding Designer. Work and live in Montreal, Canada.">
+	<meta name="keywords" content="UI, designer, website, branding, Montreal, product designer, webdesign, design, graphisme, graphiste, web design, web, interactif, mobile, tablet, application, responsive, layout, montreal, quebec, editorial, print, imprimé, photoshop, sketch"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="shortcut icon" href="/assets/images/favicon.ico" type="image/favicon.ico">
@@ -13,7 +13,7 @@
 
 	<meta property="og:title" content="Fabien Laborie, Branding &amp; UI Designer."/>
     <meta property="og:image" content="/assets/images/fabienlaborie-og-square.jpg"/>
-    <meta property="og:description" content="Fabien Laborie is a Montreal-based Branding Designer." />
+    <meta property="og:description" content="Fabien Laborie, Product and Branding Designer. Work and live in Montreal, Canada." />
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://www.fabienlaborie.ca"/>
     <meta property="og:site_name" content="Fabien Laborie, Montreal-based Branding Designer."/>
@@ -23,7 +23,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 
-	<!-- Typekit 
+	<!-- Typekit
 	<script type="text/javascript" src="//use.typekit.net/xkk2dxm.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	-->
@@ -37,18 +37,25 @@
 
 	<main class="intro">
 		<p class="intro__text">
-			<span>Montreal-based Branding Designer.</span>
+			<span>Freelance Montreal-based Product and Branding Designer.</span>
 		</p>
 		<p class="intro__text">
-			<span>I create feelings to help people remember your product.</span>
-		</p>
-
-		<p class="intro__text">
-			<span>Experimentations on</span> <strong><a class="link" href="http://www.dribbble.com/fabienlaborie/" target="_blank">Dribbble</a></strong><span>. Client projects on </span> <strong><a class="link" href="http://www.behance.net/fabienlaborie/" target="_blank">Behance</a></strong><span>. <strong><a class="link" href="http://instagram.com/fabienlaborie" target="_blank">Instagram</a></strong><span> everyday.</span> I&nbsp;</span><strong><a class="link" href="https://medium.com/@fabienlaborie" target="_blank">write</a></strong><span> about my work and </span> <strong><a class="link" href="http://www.pinterest.com/fabienlaborie/" target="_blank">Pin</a></strong><span> my inspirations. Boring things on</span> <strong><a class="link" href="http://ca.linkedin.com/pub/fabien-laborie/47/b34/244" target="_blank">LinkedIn</a></strong> <span>(I&nbsp;see you </span><strong><a class="link" href="MichaelHatesToby.gif" target="_blank">Toby Flenderson</a></strong><span>!). </span><strong><a class="link" href="http://twitter.com/fabienlaborie" target="_blank">Twitter</a></strong><span>, still don't know why.
+			<span>I design systems to help you be more dependant and scalable. Some of my clients are </span><strong><a class="link" href="http://www.breather.com" target="_blank">Breather</a></strong><span>, </span><strong><a class="link" href="http://www.realventures.com" target="_blank">Real Ventures</a></strong><span>, and </span><strong><a class="link" href="http://www.jobbook.com" target="_blank">Jobbook</a></strong><span>.</span>
 		</p>
 
 		<p class="intro__text">
-			<span>In my spare time, I&nbsp;release free typefaces such as</span> <strong><a class="link" href="https://www.behance.net/gallery/21899055/Motorless-Free-font" target="_blank">Motorless</a></strong> <span>and</span> <strong><a class="link" href="https://www.behance.net/gallery/3481787/NOUGATINE-free-font" target="_blank">Nougatine</a></strong><span>.</span> <span>I'm also a&nbsp;</span><strong><a class="link" href="https://soundcloud.com/inscience" target="_blank">beatmaker</a></strong><span>, but nobody cares.
+			<span>Most of my work is now on </span><strong><a class="link" href="http://www.dribbble.com/fabienlaborie/" target="_blank">Dribbble</a></strong><span>, while case studies are on </span><strong><a class="link" href="http://www.behance.net/fabienlaborie/" target="_blank">Behance</a></strong><span>. </span>
+			<strong><a class="link" href="http://instagram.com/fabienlaborie" target="_blank">Instagram</a></strong><span> everyday.</span>
+			<span>I&nbsp;</span><strong><a class="link" href="https://medium.com/@fabienlaborie" target="_blank">write</a></strong><span> about my work and </span><strong><a class="link" href="http://www.pinterest.com/fabienlaborie/" target="_blank">Pin</a></strong><span> my inspirations. Boring things are on the platform you love to hate, </span><strong><a class="link" href="http://ca.linkedin.com/pub/fabien-laborie/47/b34/244" target="_blank">LinkedIn</a></strong>
+			<span>(I&nbsp;see you </span><strong><a class="link" href="MichaelHatesToby.gif" target="_blank">Toby Flenderson</a></strong><span>!). </span><strong><a class="link" href="http://twitter.com/fabienlaborie" target="_blank">Twitter</a></strong><span>, still don't know why.</span>
+		</p>
+
+		<p class="intro__text">
+			<span>I now run the SketchMTL community and give training for companies to help them switch to Sketch and improve their workflow.
+		</p>
+
+		<p class="intro__text">
+				I&nbsp;also released free typefaces such as </span><strong><a class="link" href="https://www.behance.net/gallery/21899055/Motorless-Free-font" target="_blank">Motorless</a></strong> <span>and</span> <strong><a class="link" href="https://www.behance.net/gallery/3481787/NOUGATINE-free-font" target="_blank">Nougatine</a></strong><span>. </span><span>My alter ego is a&nbsp;</span><strong><a class="link" href="https://soundcloud.com/inscience" target="_blank">beatmaker named Inscience</a></strong><span>.</span>
 		</p>
 
 		<a class="email link" href="mailto:laborie.fabien@gmail.com">Drop me a line.</a>
