--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 	<main class="intro">
 		<p class="intro__text">
-			<span>Freelance Montreal-based Product and Branding Designer.</span>
+			<span>Freelance Montreal-based Designer.</span>
 		</p>
 		<p class="intro__text">
 			<span>I design systems to help you be more dependant and scalable. Some of my clients are </span><strong><a class="link" href="http://www.breather.com" target="_blank">Breather</a></strong><span>, </span><strong><a class="link" href="http://www.realventures.com" target="_blank">Real Ventures</a></strong><span>, and </span><strong><a class="link" href="http://www.jobbook.com" target="_blank">Jobbook</a></strong><span>.</span>
