--- a/index.html
+++ b/index.html
@@ -45,17 +45,16 @@
 
 		<p class="intro__text">
 			<span>Most of my work is now on </span><strong><a class="link" href="http://www.dribbble.com/fabienlaborie/" target="_blank">Dribbble</a></strong><span>, while case studies are on </span><strong><a class="link" href="http://www.behance.net/fabienlaborie/" target="_blank">Behance</a></strong><span>. </span>
-			<strong><a class="link" href="http://instagram.com/fabienlaborie" target="_blank">Instagram</a></strong><span> everyday.</span>
-			<span>I&nbsp;</span><strong><a class="link" href="https://medium.com/@fabienlaborie" target="_blank">write</a></strong><span> about my work and </span><strong><a class="link" href="http://www.pinterest.com/fabienlaborie/" target="_blank">Pin</a></strong><span> my inspirations. Boring things are on the platform you love to hate, </span><strong><a class="link" href="http://ca.linkedin.com/pub/fabien-laborie/47/b34/244" target="_blank">LinkedIn</a></strong>
+			<span>I&nbsp;</span><strong><a class="link" href="https://medium.com/@fabienlaborie" target="_blank">write</a></strong><span> about my work and </span><strong><a class="link" href="http://www.pinterest.com/fabienlaborie/" target="_blank">Pin</a></strong><span> my inspirations. </span><strong><a class="link" href="http://instagram.com/fabienlaborie" target="_blank">Instagram</a></strong><span> everyday. Boring things are on the platform you love to hate, </span><strong><a class="link" href="http://ca.linkedin.com/pub/fabien-laborie/47/b34/244" target="_blank">LinkedIn</a></strong>
 			<span>(I&nbsp;see you </span><strong><a class="link" href="MichaelHatesToby.gif" target="_blank">Toby Flenderson</a></strong><span>!). </span><strong><a class="link" href="http://twitter.com/fabienlaborie" target="_blank">Twitter</a></strong><span>, still don't know why.</span>
 		</p>
 
 		<p class="intro__text">
-			<span>I now run the SketchMTL community and give training for companies to help them switch to Sketch and improve their workflow.
+			<span>I now run the SketchMTL community and give workshops for companies to help them switch to Sketch and improve their workflow.
 		</p>
 
 		<p class="intro__text">
-				I&nbsp;also released free typefaces such as </span><strong><a class="link" href="https://www.behance.net/gallery/21899055/Motorless-Free-font" target="_blank">Motorless</a></strong> <span>and</span> <strong><a class="link" href="https://www.behance.net/gallery/3481787/NOUGATINE-free-font" target="_blank">Nougatine</a></strong><span>. </span><span>My alter ego is a&nbsp;</span><strong><a class="link" href="https://soundcloud.com/inscience" target="_blank">beatmaker named Inscience</a></strong><span>.</span>
+				<span>I&nbsp;also released free typefaces such as </span><strong><a class="link" href="https://www.behance.net/gallery/21899055/Motorless-Free-font" target="_blank">Motorless</a></strong> <span>and</span> <strong><a class="link" href="https://www.behance.net/gallery/3481787/NOUGATINE-free-font" target="_blank">Nougatine</a></strong><span>. </span><span>My&nbsp;alter ego is a&nbsp;beatmaker named </span><strong><a class="link" href="https://soundcloud.com/inscience" target="_blank">Inscience</a></strong><span>.</span>
 		</p>
 
 		<a class="email link" href="mailto:laborie.fabien@gmail.com">Drop me a line.</a>
