--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<span>Freelance Montreal-based Designer.</span>
 		</p>
 		<p class="intro__text">
-			<span>I design systems to help you be more dependant and scalable. Some of my clients are </span><strong><a class="link" href="http://www.breather.com" target="_blank">Breather</a></strong><span>, </span><strong><a class="link" href="http://www.realventures.com" target="_blank">Real Ventures</a></strong><span>, and </span><strong><a class="link" href="http://www.jobbook.com" target="_blank">Jobbook</a></strong><span>.</span>
+			<span>I design systems to help you be more independant and scalable. Some of my clients are </span><strong><a class="link" href="http://www.breather.com" target="_blank">Breather</a></strong><span>, </span><strong><a class="link" href="http://www.realventures.com" target="_blank">Real Ventures</a></strong><span>, and </span><strong><a class="link" href="http://www.zeroheight.com" target="_blank">Zeroheight</a></strong><span>.</span>
 		</p>
 
 		<p class="intro__text">
